# NeuroPlex-Nexus

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  build.spec  dev.py  docker-compose.yml  neuracollab.db  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  setup.py  start.bat  start.sh  start_app.bat  start_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  frontend.yml
backend/: alembic.ini  config.py
backend/alembic/: env.py
backend/api/: server.py
backend/modules/: text_cache.py
data/: cache.db
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
electron-app/: package-lock.json  package.json  vite.config.js
electron-app/src/: preload.js
frontend/: .editorconfig  .env.development  .env.example  .env.production  .eslintrc.cjs  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc  README.md  index.html  init-husky.js  init.js  make-executable.sh  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/.lighthouse/: budget.json
frontend/electron/: main.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  UserIntervention.jsx  env.d.ts  index.css  main.tsx  (+1 more)
neuracollab/: __init__.py  ai_config.py  ai_config_controller.py  api.py  branch_controller.py  cache_controller.py  cache_pool.py  dispatcher.py  engine.py  examples.py  init_db.py  models.py  requires.py  server.py  setup.py  storage.py  websocket_controller.py  workflow_controller.py
tests/: conftest.py  test_api.py  test_controllers.py  utils.py
(+53 files in other folders)
