[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuracollab"
version = "1.0.0"
authors = [
  { name="NeuraCollab Team", email="team@neuracollab.dev" },
]
description = "A chain-based AI collaboration system with dynamic prompt workflows"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "nltk>=3.6.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.14.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.3.0"]

[project.urls]
"Homepage" = "https://github.com/username/neuracollab"
"Bug Tracker" = "https://github.com/username/neuracollab/issues"

[tool.hatch.build.targets.wheel]
packages = ["neuracollab"]
